<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EscenasFragment"
    android:background="@color/dark_ocean_blue" >

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTituloUtilidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_no_conectado"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"
        android:textColor="@color/white" />

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloUtilidades" />


    <LinearLayout
        android:id="@+id/utilidadesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloUtilidades">

        <TextView
            android:id="@+id/txtSubtituloContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitulo_contador"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <LinearLayout
            android:id="@+id/btnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space2">

            <Button
                android:id="@+id/btnRestarContador"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/ocean_blue"
                android:text="@string/btn_restar_cotador"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnSumarContador"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="@color/ocean_blue"
                android:text="@string/btn_sumar_cotador"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>