<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:id="@+id/popupBackground">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/ocean_blue">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_padding"
                android:text="@string/txt_popup_host"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etxt_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_padding"
                android:autofillHints="obshost"
                android:ems="10"
                android:inputType="text"
                android:overScrollMode="ifContentScrolls"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_padding"
                android:text="@string/txt_popup_puerto"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etxt_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_padding"
                android:autofillHints="obsport"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_padding"
                android:text="@string/txt_popup_pass"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etxt_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_padding"
                android:autofillHints="obspass"
                android:ems="10"
                android:inputType="text"
                android:overScrollMode="ifContentScrolls"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/ocean_blue"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnDatosConectar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_ocean_blue"
                android:text="@string/btn_popup_conectar"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnDatosCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_ocean_blue"
                android:text="@string/btn_popup_cancelar"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>